# magus-engine

./: .gitignore  CMakeLists.txt  README.md  Settings.cap  build.bat  build.sh
data/: engine.conf  engine_linux.conf  engine_linux_gm1.conf  engine_linux_test_02.conf
data/UA/: mfd.uadf  pfd.uadf  pfd.uadft  rectangle.uadft  svs.uadft
data/resources/: rosering.xml
data/resources/fonts/: arial_32.fnt  arial_32.hiero
data/resources/shaders/: standard.fs  standard.vs
data/scenes/: mfd-1440x900-gm1.uadf  mfd-1440x900-gm2.uadf  mfd-Hybrid.uadf  mfd-gm2.uadf  mfd.uadf  path.uadf  rectangle_test.uadf  svs.uadf
src/: elementaengineconfig.h.in  framework.cpp  framework.h  frameworkconfig.h  magusversion.h.in  main.cpp
src/subsystems/behaviour/: behaviour_visitor.cpp  behaviour_visitor.h
src/subsystems/datamodel/: aircraft_computer.cpp  aircraft_computer.h  altimeter_dm.cpp  altimeter_dm.h  datamodel.cpp  datamodel.h
src/subsystems/graphics/: camera.cpp  camera.h  drawable.h  graphic2d.cpp  graphic2d.h  graphic3d.cpp  graphic3d.h  graphics.cpp  graphics.h  graphics_blender.cpp  graphics_blender.h  graphics_visitor.cpp  graphics_visitor.h  graphicsclass.cpp  graphicsclass.h  openglclass.cpp  openglclass.h  opengllinuxclass.cpp  opengllinuxclass.h  openglwindowsclass.cpp  openglwindowsclass.h  renderer.h  renderer_interface.cpp  renderer_interface.h  renderer_linux_opengl.cpp  renderer_windows_opengl.cpp  renderer_windows_opengl.h  rendererclass.cpp  rendererclass.h  shader.cpp  shader.h  vertex_shader.vs  vg.cpp  vg.h  visitor.h
src/subsystems/graphics/primitives/: ellipse.cpp  ellipse.h  line.cpp  line.h  model.cpp  model.h  path.cpp  path.h  rectangle.cpp  rectangle.h  text.cpp  text.h
src/subsystems/graphics/renderers/: renderer_interface.cpp  renderer_interface.h  renderer_software.cpp  renderer_software.h  renderer_structures.h  renderer_windows_opengl.cpp  renderer_windows_opengl.h
src/subsystems/graphics/renderers/linux/: graphics_blender.cpp  graphics_blender.h  renderer_linux_initialise_visitor.cpp  renderer_linux_initialise_visitor.h  renderer_linux_opengl.cpp  renderer_linux_opengl.h  renderer_linux_render_visitor.cpp  renderer_linux_render_visitor.h
src/subsystems/graphics/renderers/software/: renderer_software.cpp  renderer_software.h  renderer_software_initialise_visitor.cpp  renderer_software_initialise_visitor.h  renderer_software_render_visitor.cpp  renderer_software_render_visitor.h  sr_bitmap.cpp  sr_bitmap.h  sr_edge.cpp  sr_edge.h  sr_framebuffer.cpp  sr_framebuffer.h  sr_matrix.cpp  sr_matrix.h  sr_pipeline.cpp  sr_pipeline.h  sr_scanbuffer.cpp  sr_scanbuffer.h  sr_varier.cpp  sr_varier.h  sr_vector.cpp  sr_vector.h  sr_vertex.cpp  sr_vertex.h
src/subsystems/graphics/renderers/windows/: gletx.h  graphics_blender.cpp  graphics_blender.h  renderer_windows_initialise_visitor.cpp  renderer_windows_initialise_visitor.h  renderer_windows_opengl.cpp  renderer_windows_opengl.h  renderer_windows_render_visitor.cpp  renderer_windows_render_visitor.h
src/subsystems/input/: input.cpp  input.h  inputclass.cpp  inputclass.h
src/subsystems/io/: FontParser.cpp  FontParser.h  OBJParser.cpp  OBJParser.h  SceneParser.cpp  SceneParser.h  UA.cpp  UA.h  UAParser.cpp  UAParser.h
src/subsystems/logging/: logger.cpp  logger.h
src/subsystems/math/: matrix.cpp  matrix.h  vector.cpp  vector.h  vertex.cpp  vertex.h
src/subsystems/network/: linux_network.cpp  linux_network.h  network_interface.cpp  network_interface.h  windows_network.cpp  windows_network.h
src/subsystems/os/: os.h  os_interface.cpp  os_interface.h  os_linux.cpp  os_linux.h  os_windows.cpp  os_windows.h  windows_os.cpp  windows_os.h
src/subsystems/resources/: bitmap.h  color.cpp  color.h  font.cpp  font.h  hashtable.cpp  hashtable.h  material.cpp  material.h  mesh.cpp  mesh.h  resources.cpp  resources.h  shader.cpp  shader.h  texture.cpp  texture.h
src/subsystems/scenemanagement/: Scene.cpp  Scene.h  component.h  scene.cpp  scenenode.cpp  scenenode.h  scenenodeclass.cpp  scenenodeclass.h  visitable.h  visitor.h
src/subsystems/shaders/: shader.cpp  shader.h
src/subsystems/systems/: linuxclass.cpp  linuxclass.h  systemclass.cpp  systemclass.h  windowsclass.cpp  windowsclass.h
tools/: convert_fnt_to_xml.perl
